# memory-game

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
backend/: Dockerfile  main.py  pyproject.toml  ruff.toml
backend/app/api/v1/endpoints/: score.py
backend/app/crud/: score.py
backend/app/db/: session.py
backend/app/models/: score.py
backend/app/schemas/: score.py
frontend/: .prettierignore  Dockerfile  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/play/: page.tsx
frontend/app/results/: page.tsx
frontend/components/: Card.tsx  GameBoard.tsx  GameInfo.tsx  Header.tsx  PlayerScore.tsx  PlayerScoreDisplay.tsx  ResultsDisplay.tsx  SettingsForm.tsx  index.ts
frontend/hooks/: useCreateScore.ts  useScoreStats.ts  useTopScores.ts
frontend/lib/: gameLogic.ts  types.ts
frontend/lib/api/: scores.ts
frontend/store/: gameStore.ts
