[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.34.2",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.2.0",
    "ruff",
]
